# entitlement-jail

./: .gitignore  AGENTS.md  CONTRIBUTING.md  EntitlementJail.md  Info.plist  Inspector.entitlements  LICENSE  Makefile  PolicyWitness.inherit.bad.entitlements  PolicyWitness.inherit.entitlements  PolicyWitness.md  README.md  SIGNING.md  build-macos.sh  build.sh
Tests/TestDylib/: build.sh
experiments/: README.md  build-experiments.sh
experiments/harness/: main.swift
experiments/nodes/: entitlement-lattice-debug-jit.json  entitlement-lattice-e0-e2.json  entitlement-lattice-sandbox-extension-semantics.json  entitlement-lattice.json
experiments/plans/: tri-run-debug-jit.json  tri-run-default.json  tri-run-parametric-demo.json  tri-run-sandbox-extension-semantics.json  tri-run-smoke.json
experiments/policy/: P0_minimal.sb  P1_net_client.sb  P2_downloads_rw.sb  P3_user_selected_executable.sb  P4_bookmarks_app_scope.sb  P5_sandbox_extension_semantics.sb
experiments/substrate/: main.swift
runner/: Cargo.toml  README.md
runner/src/: debug_entitlements_probe.rs  evidence.rs  json_contract.rs  main.rs  profiles.rs
runner/tests/: cli_integration.rs
scripts/: ej-smoke.sh
tests/: README.md  build-evidence.py  ej-app-smoke.sh  ej-observer-smoke.sh  ej-session-smoke.sh  ej-smoke.sh  preflight.sh  run.sh  verify_debuggable_entitlements.sh
tests/lib/: testlib.sh
tests/tools/: compare_json_fixture.py  (+4 more)
xpc/: InProcessProbeCore.swift  ProbeAPI.swift  ProbeServiceSessionHost.swift  QuarantineLabServiceHost.swift  README.md  Signposts.swift
xpc/child/: main.swift
(+70 files in other folders)
